--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+{% extends 'base.html' %}
 
-</head>
-<body>
-    <div class="container">
+{% block content %}
+    <h1>Welcome</h1>
+    <h2>First</h2>
+    {% from '__macro.html' import show_students   %}
+    {{show_students([{'name': 'Vasya', 'score': 195}])}}
 
-        <h1>Welcome to first Flask application, your number {{number}}</h1>
-        <h2>This is dev version</h2>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
-</html>
+    <h2>Second</h2>
+    {{show_students([{'name': 'Petya', 'score': 155}])}}   
+
+{% endblock %}
